[css-contain] Fix baseline for elements with contain: layout

Layout containment elements are treated as having no baseline,
when that's applied to table cells, flex or grid items
that are baseline aligned that means that they should use
their synthesized baseline.

The patch adds simple check in LayoutBlockFlow::FirstLineBoxBaseline()
similar to what we have in other methods. If the element has
layout containment it has no baseline (it returns -1).
The same thing is done in LayoutNGMixin<Base>::FragmentBaseline()
for LayoutNG.

Two tests from the WPT suite has been modified in order to avoid
baseline alignment as they are not checking that feature
of layout containment but something else.

BUG=907709
TEST=external/wpt/css/css-contain/contain-layout-baseline-002.html
TEST=external/wpt/css/css-contain/contain-layout-baseline-003.html
TEST=external/wpt/css/css-contain/contain-layout-baseline-004.html

Change-Id: Id393787dd24bf3e34aaf73476e446fb9d0a4e593
Reviewed-on: https://chromium-review.googlesource.com/c/1348892
Commit-Queue: Manuel Rego <rego@igalia.com>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610833}
Former-commit-id: 9e7dbfacbe70a63e1e0344a511a4ad3eb0905336